# githost

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
githost/: _version.py  githost.py
