[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "githost"
version = "2023.12.25.2"
dependencies = [
  "requests",
]
requires-python = ">=3.7"
authors = [
  {name = "Ernesto Alfonso", email = "erjoalgo@gmail.com"},
]
maintainers = [
  {name = "Ernesto Alfonso", email = "erjoalgo@gmail.com"},
]
description = "A command-line client to various git repository hosting APIs"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["git", "github", "bitbucket", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/erjoalgo/githost/"
Documentation = "https://github.com/erjoalgo/githost/"
Repository = "https://github.com/erjoalgo/githost/"
"Bug Tracker" = "https://github.com/erjoalgo/githost/issues"

[project.scripts]
githost = "githost.githost:main"

[project.entry-points."githost.githost"]
githost = "githost.githost:main"
